# Fitlog

./: .gitignore  README.md
requirements/: service_requirements.md
services/api/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
services/api/app/: __init__.py  main.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/routes/: closet_items.py  health.py  notifications.py  recommendations.py
services/api/app/api/v1/schemas/: closet_items.py  image_analysis.py  notifications.py  recommendations.py
services/api/app/core/: __init__.py  config.py
services/api/app/db/: __init__.py  models.py  session.py
services/api/app/domain/: __init__.py  enums.py  image_analysis.py  models.py  notifications.py  recommendation.py  recommendations.py
services/api/app/repositories/: __init__.py  closet_items.py  demo_data.py  factory.py  image_analysis_jobs.py  notifications.py  recommendations.py
services/api/app/services/: image_analysis_provider.py  image_analysis_worker.py  morning_scheduler.py  upload_storage.py
services/api/migrations/: README.md  env.py
services/api/migrations/versions/: 0001_initial.py  0002_recommendations.py  0003_morning_scheduler.py  0004_upload_readiness.py
services/api/tests/: test_api_foundation.py  test_closet_items_api.py  test_image_analysis_jobs_api.py  test_image_analysis_provider.py  test_image_analysis_worker_api.py  test_morning_scheduler_api.py  test_persisted_recommendations_api.py  test_persistence_foundation.py  test_recommendation.py  test_upload_storage_api.py
(+29 files in other folders)
