[project]
name = "fitlog-api"
version = "0.1.0"
description = "Fitlog FastAPI backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
]

[tool.ruff]
line-length = 120
